WIP: fix HTML5 syntax error

--- a/essay/remotework_practice.html
+++ b/essay/remotework_practice.html
@@ -12,9 +12,9 @@
 <hr>
 <p>以前『<a href="./remote_work.html">リモートワーカーになった</a>』でリモートワークを始めてみて感じた利点や不便な点を紹介しました。この記事の最終更新から9ヶ月ほどが経ち、リモートワークに対する知見はさらに深まっていきました。最近はCOVID-19の感染拡大対策として在宅勤務を推し進める企業も増え、生産性や働き方改革の観点からリモートワークのプラクティスを各人が共有し磨き上げていくのはとても有意義です。</p>
 
-<p>この記事ではソフトウェア業において僕自身が実践しているリモートワークのプラクティスを共有します。「リモートワーク」は「在宅勤務」と同義として用いるため、ノマドカフェやコワーキングスペースにおけるリモートワークは範囲外です。この記事は筆者の都合により都度追記・加筆される可能性があります。<p>
+<p>この記事ではソフトウェア業において僕自身が実践しているリモートワークのプラクティスを共有します。「リモートワーク」は「在宅勤務」と同義として用いるため、ノマドカフェやコワーキングスペースにおけるリモートワークは範囲外です。この記事は筆者の都合により都度追記・加筆される可能性があります。</p>
 
-</p>記事最下部にあるとおりパブリックドメインですので、図や文章はご自由にお使いください。ただし、プラクティスの実践で生じた負担や損害等に対して筆者は一切責任を負いません。</p>
+<p>記事最下部にあるとおりパブリックドメインですので、図や文章はご自由にお使いください。ただし、プラクティスの実践で生じた負担や損害等に対して筆者は一切責任を負いません。</p>
 
 <h2>変更履歴</h2>
 <table>
