WIP: Writing practices of remote work

--- a/essay/remotework_practice.html
+++ b/essay/remotework_practice.html
@@ -14,29 +14,25 @@
 
 <p>この記事ではソフトウェア業において僕自身が実践しているリモートワークのプラクティスを共有します。「リモートワーク」は「在宅勤務」と同義として用いるため、ノマドカフェやコワーキングスペースにおけるリモートワークは範囲外です。この記事は筆者の都合により都度追記・加筆される可能性があります。</p>
 
-<p>記事最下部にあるとおりパブリックドメインですので、図や文章はご自由にお使いください。ただし、プラクティスの実践で生じた負担や損害等に対して筆者は一切責任を負いません。</p>
-
-<h2>変更履歴</h2>
-<table>
-  <thead><tr><th>日付</th><th>変更内容</th></tr></thead>
-  <tbody>
-    <tr><td>2020-03-14</td><td>初稿</td></tr>
-  </tbody>
-</table>
-<hr>
-
 <ol>
 <li><a href="#checklist">設備チェックリスト</a></li>
 <li><a href="#recommend">用意したほうが良いもの</a></li>
-<li><a href="#life">生活習慣</a></li>
-<li><a href="#time_management">時間管理</a></li>
-<li><a href="#caution">注意すべきこと</a>
-  <ol>
-    <li><a href="#embed">組込み開発</a></li>
-    <li><a href="#tel">サポートや営業の電話番</a></li>
-    <li><a href="#paper">紙の情報</a></li>
-  </ol>
+<li><a href="#life">生活習慣は変えない</a></li>
+<li><a href="#work">運動を取り入れる</a></li>
+<li><a href="#focus">集中できる環境を作る</a>
+<ol>
+<li><a href="#clean">余計なモノを視界に入れない</a></li>
+<li><a href="#pomo">ポモドーロテクニックを活用する</a></li>
+</ol>
 </li>
+<li><a href="#caution">注意すべきこと</a>
+<ol>
+<li><a href="#embed">組込み開発</a></li>
+<li><a href="#tel">サポートや営業の電話番</a></li>
+<li><a href="#paper">紙の情報</a></li>
+</ol>
+</li>
+<li><a href="#ref">参考文献</a></li>
 </ol>
 
 <h2 id="checklist">設備チェックリスト</h2>
@@ -75,9 +71,45 @@
 
 <p>またノートPCで作業しているとどうしても目線が下を向いてしまい、首に負担がかかってしまいます。ノートPCスタンドで高さを調整することで身体への負担を軽減できます。ファンが底面に付いているノートPCなら、スタンドに置くことで排気熱がこもりにくくなるでしょう。</p>
 
-<h2 id="life">生活習慣</h2>
+<h2 id="life">生活習慣は変えない</h2>
+<p>通勤する時間がなくなるぶん余暇に使える時間が増えます。多少寝る時間を遅らせたり深酒をしたりしてもコアタイムまでに起きれば見かけのうえではまったく問題ありません。ただし見かけだけで、浮いた時間に頼る生活をしているとオフィスへ出社するスタイルに戻るときとても大変です。</p>
 
-<h2 id="time_management">時間管理</h2>
+<p>通勤がないからといって就寝・起床のリズムを崩してはいけません。オフィスへ行くときと同じ時間帯で生活すべきです。本来通勤中だったはずの時間帯は趣味や読書などに充てるか、フレックスタイム制の会社ならいつもより早めに仕事へとりかかるのが得策です。</p>
+
+<h2 id="work">運動を取り入れる</h2>
+<p>リモートワークを始めると、歩いたり階段を昇降したりする運動を一切やらなくなってしまいます。通勤しなくなり足を使わずとも仕事を始められるからです。立っている時間の割合が少なくなり、ほとんど座りっぱなしで一日を過ごします。</p>
+
+<p>Joe Kutnerの『ヘルシープログラマ』を読めば、歩くことの利点や座りすぎが身体に及ぼす害などについて学べます。ある種の運動だった通勤をしないぶん、どのタイミングで運動を取り入れるかヒントを得られるでしょう。</p>
+
+<p>なにもしないと身体は鈍ります。プログラミングは脳を長時間働かせる活動なのは間違いありませんが、人体は様々なハードウェアが複雑に作用し合うシステムで、脳はその一部に過ぎません。</p>
+
+<p>『ヘルシープログラマ』を参考にしつつ、リモートワークでも（あるいは「だからこそ」）できる運動を取り入れていくべきです。</p>
+
+<dl>
+<dt>ミーティングや電話中は立つようにする</dt>
+<dd><p>『ヘルシープログラマ』p116より。Bluetoothに対応したPCとヘッドセットがあれば、カメラを使わないミーティングでは部屋を歩き回りながら参加してもいいでしょう。</p></dd>
+
+<dt>休憩の間は立つようにする</dt>
+<dd><p>『ヘルシープログラマ』p117より。リモートワーク中は立つ機会を逃さないようにすべきです。</p></dd>
+
+<dt>休憩の間にエクササイズをする</dt>
+<dd>柔軟体操や自重トレーニング、アイソメトリックトレーニングは特別な機器がいらず、5分もあれば1種はできます。腰痛対策として効果があるエクササイズは『ヘルシープログラマ』6章を、自重トレーニングのプログラムについてはPaul Wade『プリズナートレーニング』を参照してください。BIG6を鍛えながらコーディングできるのはリモートワークの強みのひとつですし、誰もそれを咎めはしないでしょう。</dd>
+</dl>
+
+<h2 id="focus">集中できる環境を作る</h2>
+<p>リモートワーク中は基本的に誰もあなたのことを見ないので、あなたがなにをしていようがそれに口を挟む人はいません。家の中は誘惑（スマホ・ゲーム機・私用のPC・漫画・小説……）だらけで、仕事をしていてもついそっちに意識をとられるのは仕方のないことです。ついそれらを手にとっても、誰も注意したり止めたりしてくれません。「社会人として……」とか「職人意識が……」とかを考えて自分を責めるより、これはもう本当に仕方のないことだと割り切って、どうすれば仕事に集中できるかを考えましょう。</p>
+
+<h3 id="clean">余計なモノを視界に入れない</h3>
+<p>まず、誘惑の元となるモノすべては押入れの奥など仕事中目に留まらないところへしまいましょう。誘惑に駆られる原因として「視界に入ってしまう」が挙げられます。解決策は単純です。視界に入れなければいいのです。特にスマホはつい手をのばしてしまうデバイスですから、通勤用のバッグにしまい、バッグごと押し入れへ収納しましょう。</p>
+
+<h3 href="pomo">ポモドーロテクニックを活用する</h3>
+<p>「人間は長時間集中できない」と自分の弱さを認めたうえで生産性を追求するテクニックもあります。Francesco Cirilloが考案した<b>ポモドーロテクニック</b>は、25分集中して作業に取り組み、5分休憩するのを繰り返すものです。1回のこの繰り返しを「ポモドーロ」と呼びます。4の倍数回目の休憩は15分とるパターンもあります。</p>
+
+<p>『ヘルシープログラマ』では、このポモドーロの休憩中になにかしらのエクササイズをする「ポモドーロワークアウト」を推奨しています。僕自身、ポモドーロの休憩中は立ち上がって部屋を歩いたり、自重トレーニングをしたりすることで運動量を稼いでいます。</p>
+
+<p>John Sonmezが『SOFT SKILLS』の中で「週に40時間働くからといって、80ポモドーロをこなせるわけではない（あなたがその偉業を達成できるなら、私は本当に驚くだろう）」（p216）と述べています。計算上一日8時間働くならポモドーロは16回できるはずですが、実際のところ不可能です。会議がないまったく空きの日に頑張ってもせいぜい10ポモドーロあたりが限度で、それ以降は疲れて惰性で働きたくなり、ポモドーロのタイマーを動かす気になれません（休憩中のエクササイズが疲れの原因ではないですよ！）。ポモドーロテクニックはインターバルトレーニングのようなもので、激しい疲労感を呼ぶものなのです。</p>
+
+<p>一日にこなしたポモドーロの数を日ごとに記録していくと、「何曜日は何ポモドーロできるはずだ」という基準が見えてきます。これをもとに曜日ごとの目標を決めたり、一日のパフォーマンスをふりかえったりできます。</p>
 
 <h2 id="caution">注意すべきこと</h2>
 <h3 id="embed">組込み開発</h3>
@@ -91,4 +123,11 @@
 <h3 id="paper">紙の情報</h3>
 <p>ホワイトボードや付箋など、オフィスへ行かないと参照できない媒体で残された情報はすべて電子化してありますか？ここではプロジェクト管理やタスク管理は電子化したほうが効率的だと主張するわけではありません。しかしチームメンバ全員がリモートワークをして一箇所の拠点に集まることができないなら、そのような情報はすべて電子化する必要があります。なにかしらのSaaSを契約したり、社内サーバにプロジェクト管理ソフトウェアを導入したりすることになります。</p>
 
+<h2 id="ref">参考文献</h2>
+<ol>
+  <li>Joe Kutner, Sky株式会社 玉川竜司 訳, 『ヘルシープログラマ』, オライリー・ジャパン, 2015</li>
+  <li>John Z. Sonmez, 長尾高弘 訳, 『SOFT SKILLS ソフトウェア開発者の人生マニュアル』, 日経BP社, 2016</li>
+</ol>
+
+<hr>
 <footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
