rename and fix html syntax error

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <ol>
 <li><a href="#netbsd">NetBSD</a></li>
 <li><a href="#freebsd">FreeBSD</a></li>
-<li><a href="#coding">コーディング</a></li>
+<li><a href="#practice">プラクティス</a></li>
 <li><a href="#essay">エッセイ</a></li>
 </ol>
 </li>
@@ -51,10 +51,10 @@
 <li><a href="./freebsd/office.html">執務環境としてのFreeBSD</a></li>
 </ul>
 
-<h3 id="coding">コーディング</h3>
+<h3 id="practice">プラクティス</h3>
 <ul>
-<li><a href="./coding/html.html">私家版HTML文書執筆ガイド</a></li>
-<li><a href="./coding/shellscript.html">私家版ShellScript Coding Style</a></li>
+<li><a href="./practice/html.html">私家版HTML文書執筆ガイド</a></li>
+<li><a href="./practice/shellscript.html">私家版ShellScript Coding Style</a></li>
 </ul>
 
 <h3 id="essay">エッセイ</h3>
