--- a/practice/remotework.html
+++ b/practice/remotework.html
@@ -102,7 +102,7 @@
 <h3 id="clean">余計なモノを視界に入れない</h3>
 <p>まず、誘惑の元となるモノすべては押入れの奥など仕事中目に留まらないところへしまいましょう。誘惑に駆られる原因として「視界に入ってしまう」が挙げられます。解決策は単純です。視界に入れなければいいのです。特にスマホはつい手をのばしてしまうデバイスですから、通勤用のバッグにしまい、バッグごと押し入れへ収納しましょう。</p>
 
-<h3 href="pomo">ポモドーロテクニックを活用する</h3>
+<h3 id="pomo">ポモドーロテクニックを活用する</h3>
 <p>「人間は長時間集中できない」と自分の弱さを認めたうえで生産性を追求するテクニックもあります。Francesco Cirilloが考案した<b>ポモドーロテクニック</b>は、25分集中して作業に取り組み、5分休憩するのを繰り返すものです。1回のこの繰り返しを「ポモドーロ」と呼びます。4の倍数回目の休憩は15分とるパターンもあります。</p>
 
 <p>『ヘルシープログラマ』では、このポモドーロの休憩中になにかしらのエクササイズをする「ポモドーロワークアウト」を推奨しています。僕自身、ポモドーロの休憩中は立ち上がって部屋を歩いたり、自重トレーニングをしたりすることで運動量を稼いでいます。</p>
