Change background color

--- a/practice/remotework.html
+++ b/practice/remotework.html
@@ -125,8 +125,9 @@
 
 <h2 id="ref">参考文献</h2>
 <ol>
-  <li>Joe Kutner, Sky株式会社 玉川竜司 訳, 『ヘルシープログラマ』, オライリー・ジャパン, 2015</li>
-  <li>John Z. Sonmez, 長尾高弘 訳, 『SOFT SKILLS ソフトウェア開発者の人生マニュアル』, 日経BP社, 2016</li>
+<li>Joe Kutner 著  Sky株式会社 玉川竜司 訳, 『ヘルシープログラマ プログラミングを楽しく続けるための健康Hack』, オライリー・ジャパン, 2015</li>
+<li>Paul Wade 著, 山田雅久 訳, 『圧倒的な強さを手に入れる究極の自重筋トレ プリズナートレーニング』, 株式会社CCCメディアハウス, 2017</li>
+<li>John Z. Sonmez 著, 長尾高弘 訳, 『SOFT SKILLS ソフトウェア開発者の人生マニュアル』, 日経BP社, 2016</li>
 </ol>
 
 <hr>
