WIP: how to focus

--- a/practice/remotework.html
+++ b/practice/remotework.html
@@ -23,8 +23,10 @@
 <ol>
 <li><a href="#clean">余計なモノを視界に入れない</a></li>
 <li><a href="#pomo">ポモドーロテクニックを活用する</a></li>
+<li><a href="#notify">通知させすぎない</a></li>
 </ol>
 </li>
+<li><a href="#workstation">設備に投資する</a></li>
 <li><a href="#caution">注意すべきこと</a>
 <ol>
 <li><a href="#embed">組込み開発</a></li>
@@ -69,7 +71,7 @@
 
 <p>そのほか、マウスやキーボードは自分好みのものを使ってください。上に挙げたものをすべて使おうとするとUSBポートが足りなくなるかもしれません。USBハブを使いポートを増やしましょう。</p>
 
-<p>またノートPCで作業しているとどうしても目線が下を向いてしまい、首に負担がかかってしまいます。ノートPCスタンドで高さを調整することで身体への負担を軽減できます。ファンが底面に付いているノートPCなら、スタンドに置くことで排気熱がこもりにくくなるでしょう。</p>
+<p>またノートPCで作業しているとどうしても目線が下を向いてしまい、首に負担がかかってしまいます。ノートPCスタンドで高さを調整することで身体への負担を軽減できます。ファンが底面に付いているノートPCなら、スタンドに置くことで排気熱がこもりにくくなります。</p>
 
 <h2 id="life">生活習慣は変えない</h2>
 <p>通勤する時間がなくなるぶん余暇に使える時間が増えます。多少寝る時間を遅らせたり深酒をしたりしてもコアタイムまでに起きれば見かけのうえではまったく問題ありません。ただし見かけだけで、浮いた時間に頼る生活をしているとオフィスへ出社するスタイルに戻るときとても大変です。</p>
@@ -86,14 +88,14 @@
 <p>『ヘルシープログラマ』を参考にしつつ、リモートワークでも（あるいは「だからこそ」）できる運動を取り入れていくべきです。</p>
 
 <dl>
-<dt>ミーティングや電話中は立つようにする</dt>
-<dd><p>『ヘルシープログラマ』p116より。Bluetoothに対応したPCとヘッドセットがあれば、カメラを使わないミーティングでは部屋を歩き回りながら参加してもいいでしょう。</p></dd>
+<dt><b>ミーティングや電話中は立つようにする</b>[Kutner2015, p116]</dt>
+<dd>Bluetoothに対応したPCとヘッドセットがあれば、カメラを使わないミーティングでは部屋を歩き回りながら参加してもいいでしょう。</dd>
 
-<dt>休憩の間は立つようにする</dt>
-<dd><p>『ヘルシープログラマ』p117より。リモートワーク中は立つ機会を逃さないようにすべきです。</p></dd>
+<dt><b>休憩の間は立つようにする</b>[Kutner2015, p117]</dt>
+<dd>リモートワーク中は立つ機会を逃さないようにすべきです。休憩中だけでなく、飲み物を飲むときや勤怠管理システムを使うときなども立つチャンスです。</dd>
 
-<dt>休憩の間にエクササイズをする</dt>
-<dd>柔軟体操や自重トレーニング、アイソメトリックトレーニングは特別な機器がいらず、5分もあれば1種はできます。腰痛対策として効果があるエクササイズは『ヘルシープログラマ』6章を、自重トレーニングのプログラムについてはPaul Wade『プリズナートレーニング』を参照してください。BIG6を鍛えながらコーディングできるのはリモートワークの強みのひとつですし、誰もそれを咎めはしないでしょう。</dd>
+<dt><b>休憩の間にエクササイズをする</b></dt>
+<dd>柔軟体操や自重トレーニング、アイソメトリックトレーニングは特別な機器がいらず、5分もあれば1種はできます。腰痛対策として効果があるエクササイズは『ヘルシープログラマ』6章[Kutner2015, pp.93-120]を、全体的なストレッチメニューは『コンピュータユーザのための健康サバイバルガイド』6章[Stigliani1997, pp.72-83]を、自重トレーニングのプログラムについてはPaul Wade『プリズナートレーニング』を参照してください[Wade2017]。BIG6を鍛えながらコーディングできるのはリモートワークの強みのひとつですし、誰もそれを咎めはしないでしょう。</dd>
 </dl>
 
 <h2 id="focus">集中できる環境を作る</h2>
@@ -107,9 +109,17 @@
 
 <p>『ヘルシープログラマ』では、このポモドーロの休憩中になにかしらのエクササイズをする「ポモドーロワークアウト」を推奨しています。僕自身、ポモドーロの休憩中は立ち上がって部屋を歩いたり、自重トレーニングをしたりすることで運動量を稼いでいます。</p>
 
-<p>John Sonmezが『SOFT SKILLS』の中で「週に40時間働くからといって、80ポモドーロをこなせるわけではない（あなたがその偉業を達成できるなら、私は本当に驚くだろう）」（p216）と述べています。計算上一日8時間働くならポモドーロは16回できるはずですが、実際のところ不可能です。会議がないまったく空きの日に頑張ってもせいぜい10ポモドーロあたりが限度で、それ以降は疲れて惰性で働きたくなり、ポモドーロのタイマーを動かす気になれません（休憩中のエクササイズが疲れの原因ではないですよ！）。ポモドーロテクニックはインターバルトレーニングのようなもので、激しい疲労感を呼ぶものなのです。</p>
+<p>John Sonmezは『SOFT SKILLS』の中で「週に40時間働くからといって、80ポモドーロをこなせるわけではない（あなたがその偉業を達成できるなら、私は本当に驚くだろう）」[Sonmez2016, p216]と述べています。計算上一日8時間働くならポモドーロは16回できるはずですが、実際のところ不可能です。会議がないまったく空きの日に頑張ってもせいぜい10ポモドーロあたりが限度で、それ以降は疲れて惰性で働きたくなり、ポモドーロのタイマーを動かす気になれません（休憩中のエクササイズが疲れの原因ではないですよ！）。ポモドーロテクニックはインターバルトレーニングのようなもので、激しい疲労感を呼ぶものなのです。</p>
 
 <p>一日にこなしたポモドーロの数を日ごとに記録していくと、「何曜日は何ポモドーロできるはずだ」という基準が見えてきます。これをもとに曜日ごとの目標を決めたり、一日のパフォーマンスをふりかえったりできます。</p>
+
+<h3 id="notify">通知させすぎない</h3>
+<p>自宅では突然声をかけられたり、雑談の話題を振られたりすることによる割り込みが発生しません。これはとても都合が良いです。Tom DeMarcoとTimothy Listerによれば、生産性を上げるには割り込みや騒音によって精神集中が中断されない状態を維持するのが重要だからです[Demarco2013]。</p>
+
+<h2 id="workstation">設備に投資する</h2>
+<p>Josb Carterは『プログラマのためのサバイバルマニュアル』の中で、ディスプレイ・キーボード・マウスへ投資すること、身体に合った机や椅子を探すことの重要さを強調しています[Carter2012, pp.131-135]。Joan Stiglianiは反復運動過多損傷の対策のひとつとして、人間工学的に設計されたキーボードを使うことを推奨しています[Stigliani1997, pp.122-128]。</p>
+
+<p>あなたの作業環境の質はオフィスよりも低いですか？もしそうなら、長期間のリモートワークによって身体的なダメージが蓄積していく可能性も拭いきれません。経済的な余裕があるならエルゴノミクスの観点から優れた道具を揃えましょう。会社全体にリモートワークが浸透していけば、交渉次第で道具への費用負担をしてくれるかもしれません。</p>
 
 <h2 id="caution">注意すべきこと</h2>
 <h3 id="embed">組込み開発</h3>
@@ -124,11 +134,24 @@
 <p>ホワイトボードや付箋など、オフィスへ行かないと参照できない媒体で残された情報はすべて電子化してありますか？ここではプロジェクト管理やタスク管理は電子化したほうが効率的だと主張するわけではありません。しかしチームメンバ全員がリモートワークをして一箇所の拠点に集まることができないなら、そのような情報はすべて電子化する必要があります。なにかしらのSaaSを契約したり、社内サーバにプロジェクト管理ソフトウェアを導入したりすることになります。</p>
 
 <h2 id="ref">参考文献</h2>
-<ol>
-<li>Joe Kutner 著  Sky株式会社 玉川竜司 訳, 『ヘルシープログラマ プログラミングを楽しく続けるための健康Hack』, オライリー・ジャパン, 2015</li>
-<li>Paul Wade 著, 山田雅久 訳, 『圧倒的な強さを手に入れる究極の自重筋トレ プリズナートレーニング』, 株式会社CCCメディアハウス, 2017</li>
-<li>John Z. Sonmez 著, 長尾高弘 訳, 『SOFT SKILLS ソフトウェア開発者の人生マニュアル』, 日経BP社, 2016</li>
-</ol>
+<dl>
+<dt><b>[Kutner2015]</b></dt>
+<dd>Joe Kutner 著  Sky株式会社 玉川竜司 訳, 『ヘルシープログラマ プログラミングを楽しく続けるための健康Hack』, 株式会社オライリー・ジャパン, ISBN978-4-87311-728-7, 2015</dd>
+<dt><b>[Wade2017]</b></dt>
+<dd>Paul Wade 著, 山田雅久 訳, 『圧倒的な強さを手に入れる究極の自重筋トレ プリズナートレーニング』, 株式会社CCCメディアハウス, ISBN978-4-484-17106-7, 2017</dd>
+<dt><b>[Sonmez2016]</b></dt>
+<dd>John Z. Sonmez 著, 長尾高弘 訳, 『SOFT SKILLS ソフトウェア開発者の人生マニュアル』, 日経BP社, ISBN978-4-8222-5155-0, 2016</dd>
+<dt><b>[Carter2012]</b></dt>
+<dd>Josb Carter 著, 長尾高弘 訳, 『プログラマのためのサバイバルマニュアル』, 株式会社オライリー・ジャパン, ISBN978-4-87311-571-9, 2012</dd>
+<dt><b>[Ford2009]</b></dt>
+<dd>Neal Ford 著, 島田浩二 監訳, 夏目大 訳, 『プロダクティブ・プログラマ&mdash;プログラマのための生産性向上術』, 株式会社オライリー・ジャパン, ISBN978-4-87311-402-6, 2009</dd>
+<dt><b>[Limoncelli2006]</b></dt>
+<dd>Thomas A. Limoncelli 著, 株式会社クイープ 訳, 『エンジニアのための時間管理術』, 株式会社オライリー・ジャパン, ISBN4-87311-307-5, 2006</dd>
+<dt><b>[Stigliani1997]</b></dt>
+<dd>Joan Stigliani 著, 矢部文 訳, 『コンピュータユーザのための健康サバイバルガイド』, 株式会社オライリー・ジャパン, ISBN4-900900-52-4, 1997</dd>
+<dt><b>[Demarco2013]</b></dt>
+<dd>Tom Demarco &amp; Timothy Lister 著, 松原友夫 山浦恒央 長尾高弘 訳, 『ピープルウェア 第3版 ヤル気こそプロジェクト成功の鍵』, 日経BP社, ISBN978-4-8222-8524-1, 2013</dd>
+</dl>
 
 <hr>
 <footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
