WIP: Writing about disable notify

--- a/practice/remotework.html
+++ b/practice/remotework.html
@@ -116,6 +116,16 @@
 <h3 id="notify">通知させすぎない</h3>
 <p>自宅では突然声をかけられたり、雑談の話題を振られたりすることによる割り込みが発生しません。これはとても都合が良いです。Tom DeMarcoとTimothy Listerによれば、生産性を上げるには割り込みや騒音によって精神集中が中断されない状態を維持するのが重要だからです[Demarco2013]。</p>
 
+<p>ただし、声掛けによる中断はなくなったものの依然としてチャットやメールの通知による割り込みは発生します。リモートワークならそれがより顕著になるでしょう。直接声をかけられない以上、これらのツールがコミュニケーションの要になるからです。</p>
+
+<p>これらによる通知はどうすればいいのでしょうか？解決策は単純です。通知を切ってしまえばいいのです。Neal Fordが『プロダクティブ・プログラマ』で述べたように、不要な通知を切ることで気が散る要因をひとつ取り除くことができます。[Ford2009, pp.46-47]。受信箱に入ってくるメールの中で返信すべきものは少ないですし、5分以内に返信しないといけないメールはまずありえないでしょう。チャットだって例外ではありません。本当にリアクションしないといけないメッセージにはメンションを入れてもらうようチーム内で合意をとることで、大体のメッセージを無視できます。</p>
+
+<p>Slackを使っているなら、本当に必要なチャンネル以外には参加せず、generalチャンネルはミュートしましょう。「なんとなく」で参加していたチャンネルから抜けましょう。メンションが付いていないメッセージはポモドーロの休憩中にチラリと読む程度で構いません。</p>
+
+<p>メールも同じことです。受信箱にメールが届いても通知を出さないように設定しましょう。メールボックスに溜まったメールを読むのは1〜2時間に1回程度で問題ありません。ただし、サポート業務などでメールボックスを頻繁に確認しないといけないケースもあります。そのときはサブジェクトや送り先をもとにメールを振り分る機能を活用しましょう。「サポート用受信箱」になにかメールが届いていないか確認するだけでよくなります。</p>
+
+<p>Windowsの仮想デスクトップのような、デスクトップを仮想的に切り替えられる機能を活用しましょう。「コミュニケーション用デスクトップ」と「作業用デスクトップ」の2つに分け、デスクトップを切り替えないとメールやチャットができないようにしましょう。</p>
+
 <h2 id="workstation">設備に投資する</h2>
 <p>Josb Carterは『プログラマのためのサバイバルマニュアル』の中で、ディスプレイ・キーボード・マウスへ投資すること、身体に合った机や椅子を探すことの重要さを強調しています[Carter2012, pp.131-135]。Joan Stiglianiは反復運動過多損傷の対策のひとつとして、人間工学的に設計されたキーボードを使うことを推奨しています[Stigliani1997, pp.122-128]。</p>
 
@@ -150,7 +160,7 @@
 <dt><b>[Stigliani1997]</b></dt>
 <dd>Joan Stigliani 著, 矢部文 訳, 『コンピュータユーザのための健康サバイバルガイド』, 株式会社オライリー・ジャパン, ISBN4-900900-52-4, 1997</dd>
 <dt><b>[Demarco2013]</b></dt>
-<dd>Tom Demarco &amp; Timothy Lister 著, 松原友夫 山浦恒央 長尾高弘 訳, 『ピープルウェア 第3版 ヤル気こそプロジェクト成功の鍵』, 日経BP社, ISBN978-4-8222-8524-1, 2013</dd>
+<dd>Tom Demarco &amp; Timothy Lister 著, 松原友夫 山浦恒央 長尾高弘 訳, 『ピープルウエア 第3版 ヤル気こそプロジェクト成功の鍵』, 日経BP社, ISBN978-4-8222-8524-1, 2013</dd>
 </dl>
 
 <hr>
