--- a/practice/remotework.html
+++ b/practice/remotework.html
@@ -32,6 +32,7 @@
 <li><a href="#embed">組込み開発</a></li>
 <li><a href="#tel">サポートや営業の電話番</a></li>
 <li><a href="#paper">紙の情報</a></li>
+<li><a href="#eco">経済的負担</a></li>
 </ol>
 </li>
 <li><a href="#ref">参考文献</a></li>
@@ -104,6 +105,8 @@
 <h3 id="clean">余計なモノを視界に入れない</h3>
 <p>まず、誘惑の元となるモノすべては押入れの奥など仕事中目に留まらないところへしまいましょう。誘惑に駆られる原因として「視界に入ってしまう」が挙げられます。解決策は単純です。視界に入れなければいいのです。特にスマホはつい手をのばしてしまうデバイスですから、通勤用のバッグにしまい、バッグごと押し入れへ収納しましょう。</p>
 
+<p>Thomas Limoncelliが『エンジニアのための時間管理術』2章2節で述べた集中しやすい環境づくりを実践しましょう[Limoncelli2006, pp.16-18]。少なくとも机の上には注意を引くなにかを置かないようにすべきです。</p>
+
 <h3 id="pomo">ポモドーロテクニックを活用する</h3>
 <p>「人間は長時間集中できない」と自分の弱さを認めたうえで生産性を追求するテクニックもあります。Francesco Cirilloが考案した<b>ポモドーロテクニック</b>は、25分集中して作業に取り組み、5分休憩するのを繰り返すものです。1回のこの繰り返しを「ポモドーロ」と呼びます。4の倍数回目の休憩は15分とるパターンもあります。</p>
 
@@ -143,24 +146,33 @@
 <h3 id="paper">紙の情報</h3>
 <p>ホワイトボードや付箋など、オフィスへ行かないと参照できない媒体で残された情報はすべて電子化してありますか？ここではプロジェクト管理やタスク管理は電子化したほうが効率的だと主張するわけではありません。しかしチームメンバ全員がリモートワークをして一箇所の拠点に集まることができないなら、そのような情報はすべて電子化する必要があります。なにかしらのSaaSを契約したり、社内サーバにプロジェクト管理ソフトウェアを導入したりすることになります。</p>
 
+<h3 id="eco">経済的負担</h3>
+<p>環境や季節に応じて、オフィスへ行くよりリモートワークするほうが家計への負担は大きくなります。冬の北海道・東北地方では暖房代がかかります。また一般的に電気・ガス・水道代もわずかに上がります。真夏の関東地方ではエアコンが必須です。</p>
+
+<p>このような経済的負担に対するスタンスは企業によって様々です。本音を言えばこれらの費用は会社側で負担してもらいたいものですが、「○社はこうしているからウチもこうすべきだ！」「社員に設備代を肩代わりさせているだけだ！」といった主張を一方的に論じたところでなにも変わらないことは確かです。雇用主との溝を深めるか、ただ言いたいことを言ってフラストレーションを発散させるだけになります。</p>
+
+<p>福利厚生に関する要求を主張するときは、目的が議論に勝つことではなく福利厚生の改善なのを忘れないようにしましょう。議論に勝ち、相手の誤りを指摘し、興奮した口調でまくしたててなにが変わるのでしょうか？仮に今回は「勝った」として、次回から交渉のテーブルが設けられることはあるのでしょうか？このようななにかしらの決定権を握っている（もしくは間接的に握っている）人に対する交渉は、Dale Carnegieが提唱した「人を説得する十二原則」にしたがうべきです[Carnegie1999]。</p>
+
 <h2 id="ref">参考文献</h2>
 <dl>
-<dt><b>[Kutner2015]</b></dt>
-<dd>Joe Kutner 著  Sky株式会社 玉川竜司 訳, 『ヘルシープログラマ プログラミングを楽しく続けるための健康Hack』, 株式会社オライリー・ジャパン, ISBN978-4-87311-728-7, 2015</dd>
-<dt><b>[Wade2017]</b></dt>
-<dd>Paul Wade 著, 山田雅久 訳, 『圧倒的な強さを手に入れる究極の自重筋トレ プリズナートレーニング』, 株式会社CCCメディアハウス, ISBN978-4-484-17106-7, 2017</dd>
-<dt><b>[Sonmez2016]</b></dt>
-<dd>John Z. Sonmez 著, 長尾高弘 訳, 『SOFT SKILLS ソフトウェア開発者の人生マニュアル』, 日経BP社, ISBN978-4-8222-5155-0, 2016</dd>
+<dt><b>[Carnegie1999]</b></dt>
+<dt>Dale Carnegie 著, 山口博 訳, 『人を動かす [新装版]』, 創元社, ISBN978-4-422-10051-7, 1999</dt>
 <dt><b>[Carter2012]</b></dt>
 <dd>Josb Carter 著, 長尾高弘 訳, 『プログラマのためのサバイバルマニュアル』, 株式会社オライリー・ジャパン, ISBN978-4-87311-571-9, 2012</dd>
-<dt><b>[Ford2009]</b></dt>
-<dd>Neal Ford 著, 島田浩二 監訳, 夏目大 訳, 『プロダクティブ・プログラマ&mdash;プログラマのための生産性向上術』, 株式会社オライリー・ジャパン, ISBN978-4-87311-402-6, 2009</dd>
-<dt><b>[Limoncelli2006]</b></dt>
-<dd>Thomas A. Limoncelli 著, 株式会社クイープ 訳, 『エンジニアのための時間管理術』, 株式会社オライリー・ジャパン, ISBN4-87311-307-5, 2006</dd>
-<dt><b>[Stigliani1997]</b></dt>
-<dd>Joan Stigliani 著, 矢部文 訳, 『コンピュータユーザのための健康サバイバルガイド』, 株式会社オライリー・ジャパン, ISBN4-900900-52-4, 1997</dd>
 <dt><b>[Demarco2013]</b></dt>
 <dd>Tom Demarco &amp; Timothy Lister 著, 松原友夫 山浦恒央 長尾高弘 訳, 『ピープルウエア 第3版 ヤル気こそプロジェクト成功の鍵』, 日経BP社, ISBN978-4-8222-8524-1, 2013</dd>
+<dt><b>[Ford2009]</b></dt>
+<dd>Neal Ford 著, 島田浩二 監訳, 夏目大 訳, 『プロダクティブ・プログラマ&mdash;プログラマのための生産性向上術』, 株式会社オライリー・ジャパン, ISBN978-4-87311-402-6, 2009</dd>
+<dt><b>[Kutner2015]</b></dt>
+<dd>Joe Kutner 著  Sky株式会社 玉川竜司 訳, 『ヘルシープログラマ プログラミングを楽しく続けるための健康Hack』, 株式会社オライリー・ジャパン, ISBN978-4-87311-728-7, 2015</dd>
+<dt><b>[Limoncelli2006]</b></dt>
+<dd>Thomas A. Limoncelli 著, 株式会社クイープ 訳, 『エンジニアのための時間管理術』, 株式会社オライリー・ジャパン, ISBN4-87311-307-5, 2006</dd>
+<dt><b>[Sonmez2016]</b></dt>
+<dd>John Z. Sonmez 著, 長尾高弘 訳, 『SOFT SKILLS ソフトウェア開発者の人生マニュアル』, 日経BP社, ISBN978-4-8222-5155-0, 2016</dd>
+<dt><b>[Stigliani1997]</b></dt>
+<dd>Joan Stigliani 著, 矢部文 訳, 『コンピュータユーザのための健康サバイバルガイド』, 株式会社オライリー・ジャパン, ISBN4-900900-52-4, 1997</dd>
+<dt><b>[Wade2017]</b></dt>
+<dd>Paul Wade 著, 山田雅久 訳, 『圧倒的な強さを手に入れる究極の自重筋トレ プリズナートレーニング』, 株式会社CCCメディアハウス, ISBN978-4-484-17106-7, 2017</dd>
 </dl>
 
 <hr>
