first edition: practices of remote work

--- a/practice/remotework.html
+++ b/practice/remotework.html
@@ -32,7 +32,7 @@
 <li><a href="#embed">組込み開発</a></li>
 <li><a href="#tel">サポートや営業の電話番</a></li>
 <li><a href="#paper">紙の情報</a></li>
-<li><a href="#eco">経済的負担</a></li>
+<li><a href="#eco">経済的負担と要求</a></li>
 </ol>
 </li>
 <li><a href="#ref">参考文献</a></li>
@@ -79,6 +79,8 @@
 
 <p>通勤がないからといって就寝・起床のリズムを崩してはいけません。オフィスへ行くときと同じ時間帯で生活すべきです。本来通勤中だったはずの時間帯は趣味や読書などに充てるか、フレックスタイム制の会社ならいつもより早めに仕事へとりかかるのが得策です。</p>
 
+<p>睡眠以外にも、ひげを剃る・髪を整える・寝間着から着替えるなど他人に会うからこそやるような行動も変わらず続けましょう。出社する日のルーチンを崩さないのがベストです。</p>
+
 <h2 id="work">運動を取り入れる</h2>
 <p>リモートワークを始めると、歩いたり階段を昇降したりする運動を一切やらなくなってしまいます。通勤しなくなり足を使わずとも仕事を始められるからです。立っている時間の割合が少なくなり、ほとんど座りっぱなしで一日を過ごします。</p>
 
@@ -123,9 +125,9 @@
 
 <p>これらによる通知はどうすればいいのでしょうか？解決策は単純です。通知を切ってしまえばいいのです。Neal Fordが『プロダクティブ・プログラマ』で述べたように、不要な通知を切ることで気が散る要因をひとつ取り除くことができます。[Ford2009, pp.46-47]。受信箱に入ってくるメールの中で返信すべきものは少ないですし、5分以内に返信しないといけないメールはまずありえないでしょう。チャットだって例外ではありません。本当にリアクションしないといけないメッセージにはメンションを入れてもらうようチーム内で合意をとることで、大体のメッセージを無視できます。</p>
 
-<p>Slackを使っているなら、本当に必要なチャンネル以外には参加せず、generalチャンネルはミュートしましょう。「なんとなく」で参加していたチャンネルから抜けましょう。メンションが付いていないメッセージはポモドーロの休憩中にチラリと読む程度で構いません。</p>
+<p>Slackを使っているなら、本当に必要なチャンネル以外には参加せず、generalチャンネルはミュートしましょう。randomなど参加する必要のないチャンネルから抜けましょう。メンションが付いていないメッセージはポモドーロの休憩中にチラリと読む程度で構いません。</p>
 
-<p>メールも同じことです。受信箱にメールが届いても通知を出さないように設定しましょう。メールボックスに溜まったメールを読むのは1〜2時間に1回程度で問題ありません。ただし、サポート業務などでメールボックスを頻繁に確認しないといけないケースもあります。そのときはサブジェクトや送り先をもとにメールを振り分る機能を活用しましょう。「サポート用受信箱」になにかメールが届いていないか確認するだけでよくなります。</p>
+<p>メールも同じことです。受信箱にメールが届いても通知を出さないように設定しましょう。メールボックスに溜まったメールを読むのは1〜2時間に1回程度で問題ありません。ただし、サポート業務などでメールボックスを頻繁に確認しないといけないケースもあります。そのときはサブジェクトや送り先をもとにメールを振り分る機能を活用しましょう。「サポート用受信箱」になにかメールが届いていないか確認するだけで済みます。</p>
 
 <p>Windowsの仮想デスクトップのような、デスクトップを仮想的に切り替えられる機能を活用しましょう。「コミュニケーション用デスクトップ」と「作業用デスクトップ」の2つに分け、デスクトップを切り替えないとメールやチャットができないようにしましょう。</p>
 
@@ -146,7 +148,7 @@
 <h3 id="paper">紙の情報</h3>
 <p>ホワイトボードや付箋など、オフィスへ行かないと参照できない媒体で残された情報はすべて電子化してありますか？ここではプロジェクト管理やタスク管理は電子化したほうが効率的だと主張するわけではありません。しかしチームメンバ全員がリモートワークをして一箇所の拠点に集まることができないなら、そのような情報はすべて電子化する必要があります。なにかしらのSaaSを契約したり、社内サーバにプロジェクト管理ソフトウェアを導入したりすることになります。</p>
 
-<h3 id="eco">経済的負担</h3>
+<h3 id="eco">経済的負担と要求</h3>
 <p>環境や季節に応じて、オフィスへ行くよりリモートワークするほうが家計への負担は大きくなります。冬の北海道・東北地方では暖房代がかかります。また一般的に電気・ガス・水道代もわずかに上がります。真夏の関東地方ではエアコンが必須です。</p>
 
 <p>このような経済的負担に対するスタンスは企業によって様々です。本音を言えばこれらの費用は会社側で負担してもらいたいものですが、「○社はこうしているからウチもこうすべきだ！」「社員に設備代を肩代わりさせているだけだ！」といった主張を一方的に論じたところでなにも変わらないことは確かです。雇用主との溝を深めるか、ただ言いたいことを言ってフラストレーションを発散させるだけになります。</p>
@@ -156,7 +158,7 @@
 <h2 id="ref">参考文献</h2>
 <dl>
 <dt><b>[Carnegie1999]</b></dt>
-<dt>Dale Carnegie 著, 山口博 訳, 『人を動かす [新装版]』, 創元社, ISBN978-4-422-10051-7, 1999</dt>
+<dd>Dale Carnegie 著, 山口博 訳, 『人を動かす [新装版]』, 創元社, ISBN978-4-422-10051-7, 1999</dd>
 <dt><b>[Carter2012]</b></dt>
 <dd>Josb Carter 著, 長尾高弘 訳, 『プログラマのためのサバイバルマニュアル』, 株式会社オライリー・ジャパン, ISBN978-4-87311-571-9, 2012</dd>
 <dt><b>[Demarco2013]</b></dt>
