--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 <ul>
 <li><a href="./practice/html.html">私家版HTML文書執筆ガイド</a></li>
 <li><a href="./practice/shellscript.html">私家版ShellScript Coding Style</a></li>
+<li><a href="./practice/remotework.html">リモートワークのプラクティス</a></li>
 </ul>
 
 <h3 id="essay">エッセイ</h3>
