--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <h2 id="about">このサイトについて</h2>
 <p>このサイトは榎本優樹（Enomoto Yuuki）&lt;<a href="mailto:uki@e-yuuki.org">uki@e-yuuki.org</a>&gt;の個人的な文書です。</p>
 
-<p>このサイトに関する批判・議論・指摘・改善案は榎本までメールで連絡してください。本ドメインのHTMLファイルはパブリックドメイン（CC0）で提供するものとします。HTMLファイル内に記載されているコードはライセンスが明記されていない限り、HTMLファイルと同じくCC0とします。PDFは共著者がいる都合上、勝手にライセンスを決めるのは無理があるのでいまのところHTMLファイルに限定しています。引用程度ならまったく問題ありません。</p>
+<p>このサイトに関する批判・議論・指摘・改善案は榎本までメールで連絡してください。各文書のライセンスはページ下部（footer）に記載しています。</p>
 
 <p>内容は予告なく変更されます。文書の変更差分や変更日時は<a href="https://github.com/user340/www">https://github.com/user340/www</a>リポジトリから確認できます。</p>
 
