Change single mdash to double

--- a/essay/free_flaws.html
+++ b/essay/free_flaws.html
@@ -32,7 +32,7 @@ This malicious feature is known as Digital Restrictions Management (DRM) (see ou
 <blockquote>
 この邪悪な機能は一般にデジタル制限管理（DRM）として知られ、フリーソフトウェアが目指す思想へのアンチテーゼです。
 </blockquote>
-<footer>&mdash; <cite>Richard M. Stallman</cite>, <cite>Free Software, Free Society Selected Essays of Richard M. Stallman Third Edition</cite>, pp.79-80</footer>
+<footer>&mdash;&mdash;<cite>Richard M. Stallman</cite>, <cite>Free Software, Free Society Selected Essays of Richard M. Stallman Third Edition</cite>, pp.79-80</footer>
 </figure>
 
 <p>つまりDRMやHDCPのような、著作権保護を理由にユーザの自由を侵害する機能はフリーソフトウェアとは相容れないと主張しているわけです。この主張は「誰でも海賊版を再頒布できるようにせよ」という意味ではなく、ユーザの（私的利用のような）現行の著作権法において合法の活動ですら制限してしまう機能に反対しているのです。</p>
