--- a/netbsd/pkg_install.html
+++ b/netbsd/pkg_install.html
@@ -32,7 +32,7 @@
   <p>You can grab a compiled binary package from remote location by specifying a URL. The base URL can also be provided by the configuration variable, PKG_PATH.</p>
   <p># pkg_add -v ftp://ftp.NetBSD.org/pub/pkgsrc/packages/NetBSD/i386/3.1_2007Q2/All/firefox-2.0 .0.4.tgz</p>
   <p># export PKG_PATH=ftp://ftp.NetBSD.org/pub/pkgsrc/packages/NetBSD/i386/3.1_2007Q2/All # pkg_add -v firefox</p>
-  <footer>&mdash; <cite>Jordan Hubbard, John Kohl, Hubert Feyrer, Thomas Klausner, Joerg Sonnenberger, PKG_ADD(1), General Commands Manual, 2010</cite></footer>
+  <footer>&mdash;&mdash;<cite>Jordan Hubbard, John Kohl, Hubert Feyrer, Thomas Klausner, Joerg Sonnenberger, PKG_ADD(1), General Commands Manual, 2010</cite></footer>
 </blockquote>
 
 <h2 id="admin">pkg_admin(1)</h2>
