--- a/practice/html.html
+++ b/practice/html.html
@@ -318,7 +318,7 @@ Output file size = 98570 bytes (18290 bytes = 15.65% decrease)</code></pre>
     &lt;p&gt;引用文&lt;/p&gt;
   &lt;/blockquote&gt;
   &lt;footer&gt;
-    &amp;mdash; &lt;cite&gt;著者名&lt;/cite&gt;, &lt;cite&gt;本のタイトル&lt;/cite&gt;
+    &amp;mdash;&amp;mdash;&lt;cite&gt;著者名&lt;/cite&gt;, &lt;cite&gt;本のタイトル&lt;/cite&gt;
   &lt;/footer&gt;
 &lt;/figure&gt;</b></code></pre>
 
@@ -326,7 +326,7 @@ Output file size = 98570 bytes (18290 bytes = 15.65% decrease)</code></pre>
 
 <figure><blockquote><p>しかし、そこには1つの障害が立ちはだかっていました。著作権です。出版された情報をコンピュータを使って共有しようとする読者は、 法律上は著作権に違反しているのです。世界は変わり、かつては出版社にとっての産業上の規制であったものが、 本来奉仕すべき一般の人々に対しての規制となってしまいました。</p></blockquote>
 <footer>
-&mdash; <cite>Richard Stallman</cite>, <cite>結城浩（訳）</cite>, <cite>自由か著作権か？</cite>
+&mdash;&mdash;<cite>Richard Stallman</cite>, <cite>結城浩（訳）</cite>, <cite>自由か著作権か？</cite>
 </footer></figure>
 
 <h3 id="vimrc">HTML5コーディングのための$HOME/.vimrc</h3>
