--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
 <h3 id="essay">エッセイ</h3>
 <ul>
+<li><a href="./essay/pkgsrc-fun.html">pkgsrcのたのしさ、FLOSSのたのしさ</a></li>
 <li><a href="./essay/free_flaws.html">自由を妨げるものとHyperbolaプロジェクト</a></li>
 <li><a href="./essay/github_actions.html">GitHub ActionsでホームページのCIを確立した</a></li>
 <li><a href="./essay/freeware_or_freesoftware.html">フリーウェアはフリーソフトウェアであるべきか？</a></li>
