--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 <h3 id="netbsd">NetBSD</h3>
 <ul>
+<li><a href="./netbsd/jenkins.html">NetBSDにJenkinsをインストールする</a></li>
 <li><a href="./netbsd/sysupgrade.html">sysupgradeを使いsets単位でバイナリアップデートをする</a></li>
 <li><a href="./netbsd/testing_with_bhyve.html">vm-bhyveとZFSを使って効率的にNetBSD仮想マシンを管理する</a></li>
 <li><a href="./netbsd/xen.html">Xenで準仮想化環境を構築する</a></li>
