引用元を明記

--- a/practice/small_monitoring.html
+++ b/practice/small_monitoring.html
@@ -15,7 +15,7 @@
     <p>スティーブ・アムゼルが突然叫んだ。「探偵が多すぎる、ハイアット！　免許を取り消せるものなら、やってみろ！　探偵が多すぎる！」</p>
   </blockquote>
   <footer style="text-align:right">
-    &mdash;&mdash;<cite>Rex Stout</cite>, <cite>直良和美（訳）</cite>, <cite>探偵が多すぎる</cite>
+    &mdash;&mdash;<cite>Rex Stout</cite>, <cite>直良和美（訳）</cite>, 「<cite>探偵が多すぎる</cite>」, <cite>小森収（編）</cite>, 『短編ミステリの二百年２』, 創元推理文庫, p308
   </footer>
 </figure>
 
