システム監視: 序文を書いた

--- a/practice/small_monitoring.html
+++ b/practice/small_monitoring.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <article class="tiny">
-<h1>必要最小限からはじめるシステム監視</h1>
+<h1>監視項目が多すぎる&mdash;&mdash;必要最小限のシステム監視のために</h1>
 <figure>
   <blockquote>
     <p style="text-indent:0em">「十時までに三十四人。午後二時には四十八人になりました。男性が四十二人、女性が六人」</p>
@@ -24,6 +24,8 @@
 <h2>必要最小限のシステム監視とは？</h2>
 
 <p>「必要最小限のシステム監視」とは文字通り必要なものしか監視をしない主義のシステム監視設計と運用です。監視設計の時点では想定していなかったような異常を取り逃がす可能性がありますが、無駄な監視項目のヒストリがディスク容量を逼迫させたり、過多なアラートによる監視システムの狼少年化を防ぐことができます。</p>
+
+<p>必要なものしか監視しない設計を実現するには「監視したいシステムではなにが動いていればいいのか？」「動いているとはどういう状態か？」を自問し続ける道のりを歩みます。単にCPU使用率が90％を超えただけでアラートを発報する監視システムは作りません。「アラート数が多すぎる、ハイアット！」と叫ばないために漠然とした監視設計を止め、無駄のない監視の美学を追求しませんか。</p>
 
 <hr>
 <footer><div style="text-align:center;padding-top:2em;padding-bottom:2em;"><a rel="license" href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0" /></a></div><p>To the extent possible under law, <a href="mailto:uki@e-yuuki.org">Yuuki Enomoto</a> has waived all copyright and related or neighboring rights to e-yuuki.org. This work is published from: Japan.</p></footer></article></body></html>
